# Clion-Library-Guide

untitled3/: CMakeLists.txt  main.c
untitled4/: CMakeLists.txt  library.c  library.h
